--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
         format_sql: true
     open-in-view: false
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/shopping
+    url: jdbc:mysql://localhost:3306/shopping
     username: root
-    password: password
+    password: strongpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 server:
